# aoc2024

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test_and_analyze.yaml
aoc2024/: calibrators.py  chronospatial_computer.py  collections.py  compuboggan.py  defrag.py  door_keypads.py  easter_bunny_countermeasures.py  graph_theory.py  guard_simulator_2024.py  lanternfish_wms.py  location_ids.py  maze.py  modern_garden.py  pathfinding.py  printer.py  reactor_reports.py  stone_simulator_2024.py  utilities.py  vector.py  word_search.py
solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
tests/: test_calibrators.py  test_chronospatial_computer.py  test_compuboggan.py  test_defrag.py  test_easter_bunny_countermeasures.py  test_graph_theory.py  test_guard_simulator_2024.py  test_lanternfish_wms.py  test_location_ids.py  test_maze.py  test_modern_garden.py  test_pathfinding.py  test_printer.py  test_reactor_reports.py  test_stone_simulator_2024.py  test_utilities.py  test_vector.py  test_word_search.py
