[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = "Solutions to Advent of Code 2024 problems written in Python."
authors = ["Dan Moore <hello@danielmoore.xyz>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
