[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = "Solutions to Advent of Code 2024 problems written in Python."
authors = ["Dan Moore <hello@danielmoore.xyz>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
tqdm = "^4.67.1"
pygame = "^2.6.1"
types-tqdm = "^4.67.0.20241119"
advent-of-code-data = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.13.0"
hypothesis = "^6.122.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
